# beautiful-mermaid

./: .gitignore  .niuma.yml  .niuma.yml.example  Cargo.toml  README.md  index.ts  package.json  samples-data.ts  xychart-design.md  xychart-samples-data.ts  xychart-test.html  xychart-test.ts
.bcc/seed/: flat.yaml  target.yaml
.bcc/seed/transition/: v1.yaml
.github/scripts/: niuma-test-gate.sh
.github/workflows/: ci.yml  niuma-discuss-reusable.yml  niuma-dispatch-completed.yml  niuma-implement-reusable.yml  niuma-implement.yml  niuma-iterate-reusable.yml  niuma-iterate.yml  niuma-label-guard.yml  niuma-orchestrate-reusable.yml  niuma-orchestrate.yml  niuma-plan.yml  niuma-review-reusable.yml  niuma-review.yml
crates/beautiful-mermaid-napi/: Cargo.toml  index.js  package.json
crates/beautiful-mermaid-napi/src/: lib.rs  text_metrics.rs
crates/beautiful-mermaid-rs/: Cargo.toml
crates/beautiful-mermaid-rs/src/: types.rs  utils.rs
crates/beautiful-mermaid-rs/tests/: types_contract.rs
docs/: rust-ascii-port-plan.md
src/: browser.ts  index.ts  layout-engine.ts  multiline-utils.ts  parser.ts  renderer.ts  text-metrics.ts  types.ts
src/__tests__/: multiline-labels.test.ts  multiline-utils.unit.test.ts  napi-smoke.test.ts  parser.test.ts  text-metrics.native-parity.test.ts  text-metrics.test.ts  types-rust-compat.test.ts  xychart-integration.test.ts
src/ascii/: ansi.ts  index.ts  types.ts  xychart.ts
src/ascii/shapes/: stadium.ts
src/sequence/: layout.ts
src/xychart/: layout.ts  parser.ts  renderer.ts  types.ts
(+2 files in other folders)
