[package]
name = "beautiful-mermaid-napi"
version = "0.0.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
beautiful-mermaid-rs = { path = "../beautiful-mermaid-rs" }
regex = "1"

napi = { version = "2", default-features = false, features = ["napi6"] }
napi-derive = "2"
